fixed post image overflow issue

--- a/src/styles/components/_posts.scss
+++ b/src/styles/components/_posts.scss
@@ -84,12 +84,57 @@
         }
     }
 
-    .post-img {
+    .post__slider {
+        position: relative;
+        min-height: 250px;
         max-height: 250px;
-        overflow: hidden;
 
-        img {
-            cursor: pointer;
+        .swiper-wrapper {
+            position: relative;
+            position: relative;
+            min-height: 250px;
+            max-height: 250px;
+        }
+
+        .swiper-pagination {
+            display: flex;
+            justify-content: center;
+            gap: 0;
+
+            >* {
+                margin: 0 !important;
+            }
+        }
+
+        .swiper-pagination-bullet {
+            border: none !important;
+            outline: none !important;
+            background: #d8d6d6 !important;
+            transform: scale(.6);
+        }
+
+        .swiper-pagination-bullet-active {
+            background-color: #219653 !important;
+            transform: scale(.5);
+
+            &::before {
+                display: none;
+            }
+        }
+
+        .slides {
+            overflow: hidden;
+            max-height: 250px;
+            text-align: center;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            bottom: 0;
+
+            img {
+                cursor: pointer;
+            }
         }
     }
 
@@ -108,28 +153,76 @@
             padding: $base 0;
 
             svg {
-                margin-left: $base;
+                margin: $base 0 0 $base;
             }
         }
 
-        div {
+        .full__img__popup {
             height: fit-content;
             max-width: 700px;
             margin: auto;
+            position: relative;
 
-            img {
-                margin-top: $base;
-                max-width: 100%;
-                object-fit: contain;
-                max-height: 85vh;
+            .swiper-pagination {
+                display: flex;
+                justify-content: center;
+                gap: 0;
+
+                >* {
+                    margin: 0 !important;
+                }
             }
-        }
-    }
 
-    .show__full__post {
-        z-index: 10000;
-        background: #000;
-        opacity: 1 !important;
-        pointer-events: all !important;
+            .swiper-pagination-bullet {
+                border: none !important;
+                outline: none !important;
+                background: #d8d6d6 !important;
+                transform: scale(.6);
+            }
+
+            .swiper-pagination-bullet-active {
+                background-color: #219653 !important;
+                transform: scale(.5);
+
+                &::before {
+                    display: none;
+                }
+            }
+
+            .swiper-wrapper {
+
+                .slides {
+                    position: relative !important;
+                    min-height: 100%;
+                    max-width: 100% !important;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    bottom: 0;
+                    max-height: 85vh;
+                    padding: 1rem;
+                    text-align: center;
+                    width: unset !important;
+
+                    img {
+                        margin-top: $base;
+                        max-width: 100%;
+                        object-fit: contain;
+                        max-height: 85vh;
+                        width: 100%;
+                    }
+                }
+
+            }
+
+        }
+
     }
+}
+
+.show__full__post {
+    z-index: 10000;
+    background: #000;
+    opacity: 1 !important;
+    pointer-events: all !important;
 }
